--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    overflow: hidden;
+    overflow-x: hidden;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -15,19 +15,38 @@ main,footer{
 
 
 nav{
-    width: 200px;
-    height: calc(100vh - 80px);
-    background-color: aqua;
+    width: 240px;
+    height: calc(100vh - 90px);
+    background-color: #000000;
+    padding: 20px 20px;
+    color: #a3a3a3;
+}
+
+.home-list{
+    flex-direction: column;
+}
+
+.home-list li{
+    display: flex;
+    align-items: center;
+}
+
+li img{
+    width: 30px;
+}
+
+.logo{
+    width: 70%;
 }
 
 .big-section{
-    width: calc(100% - 200px);
-    height: calc(100vh - 80px);
-    background-color: chartreuse;
+    width: calc(100% - 240px);
+    height: calc(100vh - 90px);
+    overflow-y: auto;
 }
 
 footer{
-    height: 80px;
+    height: 90px;
     background-color: #282828;
     align-items: center;
     padding: 0 8px;
@@ -42,11 +61,12 @@ footer{
 }
 
 .container{
-    width: 65%;
+    width: 100%;
 }
+
 .top-bar{
     background-color: #080b12;
-    height: 80px;
+    height: 90px;
     justify-content: flex-end;
     align-items: center;
     padding: 0 10px;
@@ -57,10 +77,15 @@ button{
     border: 1px solid white;
     background-color: #080b12;
     color: white;
-    padding: 10px 34px;
-    font-size: .69rem;
+    padding: 13px 36px;
+    font-size: .75rem;
     font-weight: 600;
     
+}
+
+button:hover{
+    font-size: .8rem;
+    padding: 20px 45px;
 }
 
 .main-section{
@@ -79,26 +104,37 @@ ul{
     font-size: .7rem;
     color: #7e8184;
     font-weight: 600;
+    flex-wrap: wrap;
 }
 
 .main-ul li{
     padding: 0 10px;
 }
 
+.main-ul li:hover{
+    color: white;
+}
+
 h1{
     font-size: 1.3rem;
     font-weight: 700;
-    padding: 35px 0 25px;
   }
 
 .cd-container{
     flex-wrap: wrap;
+    padding: 35px 0 25px;
 }
 
 .cd{
-    width: calc( (100% / 6) - 4px);
-    padding: 0 6px;
+    width: calc( (100% / 6) - 10px);
     text-align: center;
+    justify-content: center;
+    padding-right: 20px;
+    position: relative;
+}
+
+.cd:hover .fa-circle-play{
+    opacity: 1;
 }
 
 h2{
@@ -115,14 +151,49 @@ p{
 
 .cd img{
     width: 100%;
+    position:relative
+}
+
+.cd img:hover{
+    opacity: var(0, 0, 0, 0.65);
+}
+
+.fa-circle-play{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+}
+
+
+.round img{
+    border-radius: 50%;
 }
 
 .small-img{
     height: 37px;
 }
 
-@media screen and (max-width: 992px) {}
+.brano{
+    width: 80px;
+    justify-content: space-between;
+}
 
-@media screen and (max-width: 768px) {}
+@media screen and (max-width: 992px) {
+
+    .cd{
+    width: calc( (100% / 4) - 10px);
+}
+
+}
+
+@media screen and (max-width: 768px) {
+   
+    .cd{
+    width: calc( (100% / 2) - 10px);
+}
+
+}
 
 @media screen and (max-width: 576px) {}
