--- a/CSS/index.css
+++ b/CSS/index.css
@@ -232,7 +232,24 @@ h1{
     text-align: center;
     justify-content: center;
     padding-right: 20px;
+}
+
+.cd-img{
+    width: 100%;
     position: relative;
+}
+
+.cd-img img{
+    width: 100%;
+}
+
+.cd-play{
+    font-size: 3rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
 }
 
 .cd:hover .cd-play{
@@ -250,7 +267,7 @@ p{
     color: #7e8184;
     font-weight: 600;
 }
-
+/*
 .cd img{
     width: 100%;
     position:relative
@@ -259,14 +276,7 @@ p{
 .cd img:hover{
     opacity: var(0, 0, 0, 0.65);
 }
-
-.cd-play{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-}
+*/
 
 .round img{
     border-radius: 50%;
@@ -305,6 +315,7 @@ h4{
 
 .container-brano p:hover{
     color: white;
+    text-decoration: underline;
 }
 
 .heart-folder{
@@ -326,11 +337,13 @@ h4{
 
 .player{
     flex-direction: column;
+    width: 55%;
 }
 
 .buttons{
+    height: 40px;
     justify-content: center;
-    padding-bottom: 15px;
+    align-items: center;
 }
 
 .buttons button{
@@ -348,10 +361,13 @@ h4{
 
 .big-play:hover{
     font-size: 2.1rem;
+    padding: 0 9px;
 }
 
 .player-bar{
     align-items: center;
+    height: 40px;
+    justify-content: center;
 }
 
 .player-bar p{
@@ -364,8 +380,12 @@ h4{
     padding: 0;
 }
 
+.bar{
+    width: 60%;
+}
+
 .base-bar{
-    width: 400px;
+    width: 100%;
     height: 4px;
     border-radius: 1.5rem;
     background-color: #5a5a5a;
@@ -373,25 +393,29 @@ h4{
 }
 
 .proceeding{
-    width: 80px;
+    width: 8%;
     height: 4px;
     border-radius: 1.5rem;
     background-color: #c1c1c1;
     position: absolute;
 }
 
-.proceeding:hover{
+.base-bar:hover + .proceeding{
     background-color: greenyellow;
 }
 
 .fa-circle{
     position: absolute;
     color: #c1c1c1;
-    left: 75px;
+}
+
+.proceeding-circle{
+    position: absolute;
+    right: 0;
     opacity: 0;
 }
 
-.proceeding:hover .fa-circle{
+.base-bar:hover + .proceeding-circle{
     opacity: 1;
 }
 
@@ -426,11 +450,17 @@ h4{
     position: absolute;
 }
 
-.volume-level:hover{
+.volume-circle{
+    position: absolute;
+    right: 0;
+    opacity: 0;
+}
+
+.volume-bar:hover + .volume-level{
     background-color: greenyellow;
 }
 
-.volume-level:hover .fa-circle{
+.volume-bar:hover .volume-circle{
     opacity: 1;
 }
 
@@ -439,7 +469,7 @@ h4{
     .cd{
     width: calc( (100% / 4) - 10px);
     }
-
+/*
     .base-bar{
         width: 300px;
     }
@@ -447,7 +477,7 @@ h4{
     .proceeding{
         width: 60px;
     }
-
+*/
 }
 
 @media screen and (max-width: 768px) {
@@ -465,13 +495,21 @@ h4{
         justify-content: space-between;
         padding: 0 10px;
     }
-
+/*
     .base-bar{
         width: 200px;
     }
 
     .proceeding{
         width: 40px;
+    }
+*/    
+    .details i{
+        padding-left: 10px;
+    }
+    
+    .bar{
+        padding-left: 10px;
     }
 
     .volume-bar{
@@ -532,6 +570,11 @@ h4{
         height: 35px;
     }
 
+    .player{
+        width: 40%;
+    }
+
+/*
     .base-bar{
         width: 120px;
     }
@@ -539,13 +582,13 @@ h4{
     .proceeding{
         width: 35px;
     }
-    
+*/    
     .details i{
-        padding-left: 10px;
+        padding-left: 5px;
     }
     
     .bar{
-        padding-left: 10px;
+        padding-left: 5px;
     }
 
     .volume-bar{
