--- a/CSS/index.css
+++ b/CSS/index.css
@@ -148,7 +148,7 @@ nav h3:hover{
 .big-section{
     width: calc(100% - 280px);
     height: calc(100vh - 90px);
-    overflow-y: auto;
+    overflow: hidden;
 }
 
 .top-bar{
@@ -179,6 +179,9 @@ nav h3:hover{
     padding: 20px;
     background-color: #141922;
     color: white;
+    width: 100%;
+    height: calc(100vh - 90px - 90px);
+    overflow-y: auto;
 }
 
 
@@ -366,12 +369,12 @@ h4{
 
 .big-play{
     font-size: 1.9rem;
-    padding: 0 10px;
+    padding: 0 1rem;
 }
 
 .big-play:hover{
     font-size: 2.1rem;
-    padding: 0 9px;
+    padding: 0 0.9rem;
 }
 
 .player-bar{
@@ -559,16 +562,13 @@ h4{
         display: none;
     }
 
-    .user{
+    .no-show{
         display: none;
     }
 
-    .fa-circle-down{
-        display: block !important;
-    }
-
-    .profile-img{
-        display: block !important;
+    .circle-down{
+        margin: auto;
+        padding-bottom: 10px;
     }
 
     .big-section{
