--- a/CSS/index - bonus.css
+++ b/CSS/index - bonus.css
@@ -33,6 +33,7 @@ nav{
     color: #a3a3a3;
     flex-flow: column;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .nav-img{
@@ -91,6 +92,11 @@ nav h3:hover{
     width: 2px;
     height: 30px;
     left: -20px;
+}
+
+.playlist-wrapper{
+    height: 240px;
+    overflow-y: auto;
 }
 
 .playlist h3{
