--- a/CSS/index.css
+++ b/CSS/index.css
@@ -508,7 +508,7 @@ h4{
     .heart-folder{
         flex-direction: column;
         justify-content: space-between;
-        padding: 0 20px;
+        padding-left: 20px;
     }
 /*
     .base-bar{
@@ -580,6 +580,10 @@ h4{
 
     .small-img{
         height: 35px;
+    }
+
+    .heart-folder{
+        padding-left: 10px;
     }
 
     .player{
