--- a/CSS/index - bonus.css
+++ b/CSS/index - bonus.css
@@ -413,7 +413,7 @@ h4{
 }
 
 .proceeding{
-    max-width: 8%;
+    width: 8%;
     height: 4px;
     border-radius: 1.5rem;
     background-color: #c1c1c1;
