Little adjustment on volume-circle in last media query

--- a/CSS/index - bonus.css
+++ b/CSS/index - bonus.css
@@ -665,6 +665,11 @@ h4{
     .details i{
         padding-right: 20px;
     }
+
+    .volume-circle{
+        right: 0px;
+        left: 1px;
+    }
 }
 
 @media screen and (max-height: 700px){
